--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 </head>
 <body>
   <div class="container">
     <div id="header-create">
       <button type="button" class="btn btn-primary" onclick="createStudent()">Add</button>
+      <!-- <button type="button" class="btn btn-primary" onclick="location.assign('http://localhost:8000/login')">Login</button> -->
     </div>
     <table class="table table-striped table-bordered">
       <thead>
@@ -31,6 +33,6 @@
       <!-- Render custom modal here -->
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 </html>
