--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
   <title>Student list</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="static/styles.css">
   <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 </head>
 <body>
